@@ -1,3 +1,5 @@
+[COLOR yellow][B]v1.2.3[/B][/COLOR]
+* Added "build_switch_skin" functionality for unified build.
 [COLOR yellow][B]v1.2.2[/B][/COLOR]
 * Added dialog window when quick update starts.
 [COLOR yellow][B]v1.2.1[/B][/COLOR]
